# Lab02_4360987

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
constants/: fact_const_columns.py  path_strings.py
data/raw_parquet_lab2/: owid_co2_codebook.parquet
data_quality/: gx.py
database/: init.sql
docs/: catalog.json  manifest.json
elt_dbt/: dbt_project.yml
elt_dbt/macros/: context_calculations.sql  gases_intensity_calculations.sql  prctage_calculation.sql
elt_dbt/models/marts/: dim_iso_country.sql  dim_iso_country_year.sql  fact_co2_national.sql  schema.yml
elt_dbt/models/marts/metrics/: amazon_effect_metric.sql  carbon_leakage_metrics.sql  comparisons_metrics.sql  emission_metrics.sql  south_america_metrics.sql
elt_dbt/models/staging/: sources.yml  stg_co2_data.sql
elt_dbt/tests/: assert_ghg_is_positive.sql
frontend/metabase_data/metabase/: metabase.mv.db  metabase.trace.db
gx_docs/gx/: great_expectations.yml
gx_docs/gx/checkpoints/: co2_checkpoint.json
gx_docs/gx/expectations/: .ge_store_backend_id  co2_quality_test.json
gx_docs/gx/validation_definitions/: co2_validations.json
profiles/: .user.yml  profiles.yml
src/: extraction.py  load.py
